@@ -15,7 +15,6 @@ import org.springframework.util.CollectionUtils;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @Component
@@ -52,7 +51,7 @@ public class IOMapper {
         return IntStream
                 .range(0, documents.size())
                 .mapToObj(index -> mapToThirdPartyAttachment(documents.get(index), index, iun))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ThirdPartyAttachment mapToThirdPartyAttachment(NotificationDocument document, int indexDocument, String iun) {
